Fixed the labels wrapping on two lines in tablet view

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ label {
     margin-top: 10px;
     margin-bottom: 0.5em; 
     color: #3d73a8;
-    font-size: .97rem;
+    font-size: .75rem;
 }
 
 .text-input {
